fix: Layout breaking issue of vendor dashboard product shipping input

--- a/assets/src/less/products.less
+++ b/assets/src/less/products.less
@@ -470,6 +470,17 @@
   .dokan-shipping-container {
     .dokan-shipping-dimention-options {
       margin-bottom: 20px;
+
+      input {
+        width: 23.3%;
+        float: left;
+        margin-right: 2%;
+
+        &#_height {
+          margin-right: 0;
+        }
+      }
+
       .dokan-form-group {
         width: 23.3%;
         float: left;
